--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
   "name": "express-mongoose-docs",
-  "description": "An interface to the Apple Push Notification service for Node.js",
-  "version": "0.0.1",
+  "description": "Auto-generated API Documentation for Express and Mongoose based APIs",
+  "version": "0.0.3",
   "author": {
     "name": "Nabeel Ahmad"
-  },  
+  },
   "keywords": [
     "express",
     "mongoose",
     "docs",
-	"documentation",
-	"auto",
-    "generator"    
+    "documentation",
+    "auto",
+    "generator"
   ],
   "main": "index.js",
   "bugs": {
-    "url": "https://github.com/argon/node-apn/issues"
+    "url": "https://github.com/nabeel-ahmad/express-mongoose-docs/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/argon/node-apn.git"
+    "url": "https://github.com/nabeel-ahmad/express-mongoose-docs.git"
   },
   "dependencies": {
-    "mongoose": "3.8.1",
-	"underscore": "~1.5.2"
+    "underscore": "~1.5.2"
   },
   "engines": {
     "node": ">= 0.6.6"
-  }
+  },
+  "readme": "express-mongoose-docs\r\n=====================\r\n\r\nThis module will take away the pain of writing API and Data Model documentation for your Express & Mongoose based API\r\n",
+  "readmeFilename": "README.md",
+  "_id": "express-mongoose-docs@0.0.2",
+  "_from": "express-mongoose-docs@"
 }
