--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "dependencies": {
         "underscore": "~1.5.2"
     },
+    "devDependencies": {
+        "express": "3.4.0",
+        "mongoose": "3.8.8",
+        "mocha": "~1.18.2",
+        "supertest": "~0.10.0",
+        "should": "~3.2.0"
+    },
     "licenses": [
         {
             "type": "MIT",
@@ -32,5 +39,8 @@
     ],
     "engines": {
         "node": ">= 0.6.6"
+    },
+    "scripts": {
+        "test": "mocha"
     }
 }
