--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "underscore": "~1.5.2"
     },
     "devDependencies": {
-        "express": "3.4.0",
+        "express": "^4.13.4",
         "mongoose": "3.8.8",
         "mocha": "~1.18.2",
         "supertest": "~0.10.0",
